--- a/browser/js/common/directives/footer/footer.html
+++ b/browser/js/common/directives/footer/footer.html
@@ -1,3 +1,3 @@
       <ul>
-        <li class="toolbar-button" ng-repeat="category in categories" ng-click="goToCategory(category)">{{category}}...</li>
+        <li class="toolbar-button" ng-repeat="category in categories" ng-click="goToCategory(category.name)">{{category.name}}...</li>
       </ul>
