--- a/browser/js/common/directives/navbar/navbar.html
+++ b/browser/js/common/directives/navbar/navbar.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-static-top">
-    <div class="container">
+    <div id='nav' class="container">
         <div class="navbar-header">
             <fullstack-logo></fullstack-logo>
         </div>
@@ -8,9 +8,10 @@
                 <a ui-sref-active="active" ui-sref="{{ item.state }}">{{ item.label }}</a>
             </li>
         </ul>
-        <button ng-show="!user" ui-sref="login" class="btn login-button">Login</button>
+        <button ng-show="!user" ui-sref="login" class="btn login-button">Login/Signup</button>
         <div ng-show="user" class="welcome">
-            <span>Welcome, {{ user.email }}!</span>
+            <span><a ng-repeat='item in forUsers' ui-sref="{{item.state}}(user)">{{item.label}}  </a>  </span>
+            <span><a ui-sref='user(user)'>Welcome, {{ user.email }}!</a></span>
             <a ng-click="logout()">Logout</a>
         </div>
     </div>
