--- a/browser/js/product/product.template.html
+++ b/browser/js/product/product.template.html
@@ -5,7 +5,7 @@
     <div class="stars">
         <span class="glyphicon glyphicon-star"></span>
     </div>
-    <button class="btn add-a-review"><span class="glyphicon glyphicon-pencil"></span> Add Review</button>
+    <button class="btn add-a-review" ui-sref="review({ product: product._id })"><span class="glyphicon glyphicon-pencil"></span> Add Review</button>
   </div>
   <article class=
   "product-article">
