--- a/browser/js/login/login.html
+++ b/browser/js/login/login.html
@@ -1,3 +1,4 @@
+<h1>LOGIN</h1>
 <form id="login-form" name="loginForm" ng-submit="loginForm.$valid && sendLogin(login)">
 
     <alert type="danger" ng-show="error">
@@ -13,4 +14,19 @@
         <input type="password" ng-model="login.password" class="form-control" id="login-password" placeholder="Password">
     </div>
     <button type="submit" class="btn btn-default">Submit</button>
+</form>
+
+<h1>SIGN UP</h1>
+<form id='signup-form' name="signupForm" ng-submit='signupForm.$valid && localSignup(signup)'>
+
+    <div class="form-group">
+        <label for="email">Email address</label>
+        <input type="text" ng-model="signup.email" class="form-control" id="signup-email" placeholder="Enter email">
+    </div>
+    <div class="form-group">
+        <label for="signup-password">Password</label>
+        <input type="password" ng-model="signup.password" class="form-control" id="signup-password" placeholder="Password">
+    </div>
+    <button type='submit' class='btn btn-default'>Sign up</button>
+
 </form>
