Fixing merge conflicts.

--- a/browser/js/home/home.html
+++ b/browser/js/home/home.html
@@ -1,5 +1,7 @@
 <section id="home">
-    <fullstack-logo></fullstack-logo>
-    <rando-greeting></rando-greeting>
+    <!-- <fullstack-logo></fullstack-logo>
+    <rando-greeting></rando-greeting> -->
+    <div class="jumbotron">
+    </div>
     
 </section>
