--- a/browser/js/home/home.html
+++ b/browser/js/home/home.html
@@ -1,7 +1,5 @@
 <section id="home">
-    <!-- <fullstack-logo></fullstack-logo>
-    <rando-greeting></rando-greeting> -->
-    <div class="jumbotron">
-    </div>
+    <fullstack-logo></fullstack-logo>
+    <rando-greeting></rando-greeting>
     
 </section>
