--- a/browser/js/product/product.review.template.html
+++ b/browser/js/product/product.review.template.html
@@ -1,16 +1,19 @@
-<div class="modal-content">
+<div class="modal-content review-submission-holder">
         <div class="modal-header ng-scope">
-            <h3 class="modal-title">Create A Review</h3>
+            <h3 class="modal-title satisfy-font">Create A Review</h3>
         </div>
         <div class="modal-body ng-scope">
-          <form>
-          	<textarea name="review-content" ng-model="review.content"></textarea>
-          	<input ng-model="review.stars" type="number" min="1" max='5'/>
+          <form name="review" class="review-form">
+          <div class="review-stars-holder">
+            <label class="review-stars-label satisfy-font" for="review-stars">Star Rating:</label>
+          	<input class="review-stars-input" ng-model="review.stars" type="number" name="review-stars"min="1" max='5'/>
+          </div>
+            <textarea class="review-textarea" name="review-content" ng-model="review.content" placeholder="What do you think? Let other people know here!"></textarea>
           </form>
 
         </div>
         <div class="modal-footer ng-scope">
-            <button class="btn btn-primary" type="button" ng-click="ok()">OK</button>
-            <button class="btn btn-warning" type="button" ng-click="cancel()">Cancel</button>
+            <button class="btn add-review-btn" type="button" ng-click="ok()">Submit Review</button>
+            <button class="btn cancel-review-btn" type="button" ng-click="cancel()">Cancel</button>
         </div>
 </div>
