--- a/browser/js/common/directives/category-selector/category-selector.template.html
+++ b/browser/js/common/directives/category-selector/category-selector.template.html
@@ -1,13 +1,10 @@
 <section>
-<!--   <div class="side-panel-tab">
-    <h3>Categories</h3>
-  </div> -->  
   <div class="side-panel-internal">
     <header>
       <h3>...choose a category</h3>
     </header>
     <ul>
-      <li class="toolbar-button" ng-repeat="category in categories" ng-click="goToCategory(category.name)"></li>
+      <li class="toolbar-button" ng-repeat="category in categories" ng-click="goToCategory(category.name)">{{ category.name }}</li>
     </ul>
   </div>
 </section>
