--- a/browser/js/product/product.review.template.html
+++ b/browser/js/product/product.review.template.html
@@ -5,7 +5,7 @@
         <div class="modal-body ng-scope">
           <form name="review" class="review-form">
           <div class="review-stars-holder">
-            <uib-rating ng-model="review.stars" max="5">
+            <uib-rating ng-model="review.stars" max="5" title="Select how many stars you would rate this.">
             </uib-rating>
           </div>
             <textarea class="review-textarea" name="review-content" ng-model="review.content" placeholder="What do you think? Let other people know here!" ng-required=true></textarea>
