--- a/browser/js/checkout/checkout.template.html
+++ b/browser/js/checkout/checkout.template.html
@@ -4,36 +4,61 @@
     <h2>Shipping</h2>
     <form ng-submit="submitAddress()">
       <label>To:</label>
-      <input type="text" ng-model="address.name"/>
+      <input class="checkoutField" type="text" ng-model="address.name"/>
       <label>Line One</label>
-      <input type="text" ng-model="address.lineOne"/>
+      <input class="checkoutField" type="text" ng-model="address.lineOne"/>
       <label>Line Two</label>
-      <input type="text" ng-model="address.lineTwo"/>
+      <input class="checkoutField" type="text" ng-model="address.lineTwo"/>
       <label>City</label>
-      <input type="text" ng-model="address.city"/>
+      <input class="checkoutField" type="text" ng-model="address.city"/>
       <label>Zip Code</label>
-      <input type="text" ng-model="address.zip"/>
+      <input class="checkoutField" type="text" ng-model="address.zip"/>
       <label>State</label>
-      <input type="text" ng-model="address.state"/>
+      <input class="checkoutField" type="text" ng-model="address.state"/>
       <input type="submit" value="Add Address"/>
     </form>
+    <div class="user-shipping-addresses">
+      <section ng-repeat="address in userShipping" class="user-address">
+        {{ address.name }}
+        <label>Use shipping address for billing:</label>
+        <input type="checkbox" ng-click="useShippingAddress(address)"/>
+        
+      </section>
+    </div>
   </div>
   <div id="checkout-billing" class="checkout-panel">
     <h2>Payment</h2>
-    <form ng-hide="false">
+    <form ng-hide="false" ng-submit="submitBilling()">
       <label>To:</label>
-      <input type="text" ng-model="billing.name"/>
+      <input class="checkoutField" type="text" ng-model="billing.address.name"/>
       <label>Line One</label>
-      <input type="text" ng-model="billing.lineOne"/>
+      <input class="checkoutField" type="text" ng-model="billing.address.lineOne"/>
       <label>Line Two</label>
-      <input type="text" ng-model="billing.lineTwo"/>
+      <input class="checkoutField" type="text" ng-model="billing.address.lineTwo"/>
       <label>City</label>
-      <input type="text" ng-model="billing.city"/>
+      <input class="checkoutField" type="text" ng-model="billing.address.city"/>
       <label>Zip Code</label>
-      <input type="text" ng-model="billing.zip"/>
+      <input class="checkoutField" type="text" ng-model="billing.address.zip"/>
       <label>State</label>
-      <input type="text" ng-model="address.state"/>
+      <input class="checkoutField" type="text" ng-model="billing.address.state"/>
       <input type="submit" value="Add Card"/>
+      <label>Credit Card Number:</label>
+      <input ng-model="billing.number" type="text"/>
+      <label>Expiry Month:</label>
+      <input ng-model="billing.exp_month"type="number"/>
+      <label>Expiry Year:</label>
+      <input ng-model="billing.exp_year"/>
+      <label>CVC:</label>
+      <input ng-model="billing.cvc"></input>
+      <input type="submit">
+      <div class="user-shipping-addresses">
+        <section ng-repeat="card in userBilling" class="user-address">
+          {{ card }}
+          <label>Use shipping address for billing:</label>
+          <input type="checkbox" ng-click="useShippingAddress(address)"/>
+        </section>
+    </div>
+
     </form>
   </div>
   <div id="checkout-summary" class="checkout-panel">
