--- a/browser/js/common/directives/navbar/navbar.html
+++ b/browser/js/common/directives/navbar/navbar.html
@@ -7,12 +7,12 @@
             <li ng-repeat="item in items" ng-show="!item.auth || isLoggedIn()">
                 <a ui-sref-active="active" ui-sref="{{ item.state }}">{{ item.label }}</a>
             </li>
-            <li><a ui-sref="order">My Cart</a></li>
+            <li><a ui-sref="order">My Cart <span class="glyphicon glyphicon-shopping-cart"></span></a></li>
         </ul>
         
         <button ng-show="!user" ui-sref="login" class="btn login-button">Login</button>
         <div ng-show="user" class="welcome">
-            <span><a ng-repeat='item in forUsers' ui-sref="{{item.state}}(user)">{{item.label}}  </a>  </span>
+            <span><a ui-sref="wishlists(user)">My Wishlists  </a>  </span>
             <span><a ui-sref='user(user)'>Welcome, {{ user.email }}!</a></span>
             <a ng-click="logout()">Logout</a>
         </div>
