--- a/browser/js/wishlist/wishlists.html
+++ b/browser/js/wishlist/wishlists.html
@@ -1,2 +1,5 @@
-<!-- <h2 ng-repeat='wishlist in wishlists'><a ui-sref='wishlist(user._id, wishlist._id)'>{{wishlist}}</a></h2> -->
-<p>{{wishlists}}</p>
+<h1 style='text-align:center'>{{theUser.email}}'s Wishlists</h1>
+<div class='panel panel-default' style='text-align:center' ng-repeat='wishlist in wishlists'>
+	<h2>{{wishlist.wlName}}</h2>
+	<button class='btn btn-default' ng-click='goToWishlist(wishlist._id)'>Go To Wishlist</button>
+</div>
