--- a/browser/js/product/product.template.html
+++ b/browser/js/product/product.template.html
@@ -23,11 +23,11 @@
       </select>
       <!-- <h2>{{creating}}</h2>
       <h2>{{wlName}}</h2> -->
-      <span class="btn new-playlist" ng-hide="wlName"> Create New Wishlist: <input ng-model="newWishlistName" type="text"/> </span>
+      <span class="newWishlist" ng-hide="wlName"> Create New Wishlist: <input ng-model="newWishlistName" type="text"/> </span>
       <button class="btn add-to-wishlist" ng-disabled="!order.number"ng-click="addWishList()"><span class="glyphicon glyphicon-heart"></span>Add to Wishlist</button>
       <p ng-show="notLoggedIn">Please sign up or login to create a wishlist.</p>
       <p ng-show="wlAdded" class="blink_me">{{order.number}} items were added to your wishlist!</p>
-      <button class="btn add-to-cart" ng-click="addToOrder()"><span class="glyphicon glyphicon-plus"></span>Add To Cart</button>
+      <button ng-disabled="!order.number" class="btn add-to-cart" ng-click="addToOrder()"><span class="glyphicon glyphicon-plus"></span>Add To Cart</button>
       <p ng-show="added" class="blink_me">{{order.number}} items were added to your cart!</p>
     </aside>
   </article>
