Completed basic functionality.

--- a/browser/js/checkout/checkout.template.html
+++ b/browser/js/checkout/checkout.template.html
@@ -68,6 +68,6 @@
   </section>
   <section id="checkout-summary" class="checkout-panel">
     <h2>Summary</h2>
-    <p>Total Price: {{ totalPrice }}
+    <p>Total Price: {{ totalPrice | currency }}
   </section>
 </div>
