--- a/browser/js/orders/order.html
+++ b/browser/js/orders/order.html
@@ -10,7 +10,8 @@
 	</ul>
 
 	<h1>TOTAL: {{total | currency}}</h1>
-	<button class="btn btn-success" ng-click='goToCheckout()'>Checkout</button>
+	<span ng-show="empty" class="label label-danger">Hmmm, looks like your cart is empty!</span>
+	<button class="btn btn-success" ng-click='goToCheckout()' ng-disabled="empty">Checkout</button>
 	<button class="btn btn-warning" ng-click='deleteOrder()'>Delete Order</button>
 
 
