--- a/browser/js/checkout/checkout.template.html
+++ b/browser/js/checkout/checkout.template.html
@@ -1,4 +1,4 @@
-<div id="checkout">  
+<div id="checkout">
   <section id="checkout-options" class="checkout-panel">
 
     <div id="checkout-shipping">
@@ -28,7 +28,7 @@
           <p>{{addreses.state}}</p>
           <label>Use shipping address for billing:</label>
           <button class="btn" ng-click="useShippingAddress(address)">Use this address</button>
-          
+
         </section>
       </div>
     </div>
@@ -68,6 +68,21 @@
   </section>
   <section id="checkout-summary" class="checkout-panel">
     <h2>Summary</h2>
-    <p>Total Price: {{ totalPrice | currency }}
+    <div class="order-summary">
+       <ul>
+          <li ng-repeat="item in items">
+            <div class="item-pic">
+              {{item.product.photo}}
+            </div>
+            <div class="item-details">
+             <p> {{item.product.title}}</p>
+             <p>  Price: {{item.price}}</p>
+             <p> Quantity: {{item.quantity}}</p>
+            </div>
+          </li>
+       </ul>
+    </div>
+    <p>Total Price: {{ totalPrice | currency }}</p>
+    <button ng-click="purchase">Confirm Order</button>
   </section>
 </div>
