--- a/browser/js/admin/admin.products.template.html
+++ b/browser/js/admin/admin.products.template.html
@@ -1,15 +1,12 @@
 <div class="admin-products">
    <ul>
       <li ng-repeat="product in products">
-      <form ng-submit="editProduct(product)">
-		     <p contenteditable ng-model="product.title">{{product.title}}</p>
-		     <input ng-model="updateproduct.description" value="{{product.description}}"/>
-		     <input ng-model="updateproduct.price" value="{{product.price}}"/>
-		     <input ng-model="updateproduct.category" value="{{product.category}}"/>
-		     <p>photo{{product.photo}}</p>
-		     <input ng-model="updateproduct.quantity" value="{{product.quantity}}"/>
-		     <button type="submit">save</button>
-	    </form>
+		     <p>{{product.title}}</p>
+         <p></p>
+         <p></p>
+         <p></p>
+         <p></p>
+		     <button ng-click="editProduct(product)">Edit</button>
       </li>
    </ul>
 </div>
