Completed status change buttons.

--- a/browser/js/admin/admin.orders.template.html
+++ b/browser/js/admin/admin.orders.template.html
@@ -12,8 +12,17 @@
      <p>{{ order.orderDate}}</p>
      <p>{{order.status}}</p>
      <p>Items</p>
-     <p ng-repeat="item in order.items">
-      <span class="warning">{{ item }}</span>
+     <div ng-repeat="item in order.items">
+      <p>{{ item.product.title }} </p>
+      <p>{{ item.price }}</p>
+      <label>Set Pending</label>
+      <button ng-hide="order.status === 'pending'" ng-click="setStatus(order, 'pending')">Pending</button>
+      <button ng-hide="order.status === 'shipping'" ng-click="setStatus(order, 'shipping')">Shipping</button>
+      <button ng-hide="order.status === 'cancelled'" ng-click="setStatus(order, 'cancelled')">Cancelled</button>
+      <button ng-hide="order.status === 'completed'" ng-click="setStatus(order, 'completed')">Completed</button>
+
+     </div>
+      
      </p>
       </li>
    </ul>
