--- a/browser/js/login/login.html
+++ b/browser/js/login/login.html
@@ -32,3 +32,8 @@
     </div>
     <button type='submit' class='btn btn-default'>Sign up</button>
 </form>
+
+<h1>...OR SIGN IN WITH A TRUSTED PARTNER</h1>
+<a target='_self' href='/auth/google' class='btn btn-danger btn-google'>Google</a>
+<!-- <a target='_self' href='/auth/facebook' class='btn btn-primary btn-facebook'>Facebook</a>
+ --><a target='_self' href='/auth/twitter' class='btn btn-info btn-twitter'>Twitter</a>
