--- a/browser/js/checkout/checkout.template.html
+++ b/browser/js/checkout/checkout.template.html
@@ -83,6 +83,6 @@
        </ul>
     </div>
     <p>Total Price: {{ totalPrice | currency }}</p>
-    <button ng-click="purchase">Confirm Order</button>
+    <button ng-click="purchase()">Confirm Order</button>
   </section>
 </div>
