--- a/browser/js/common/directives/search/search.template.html
+++ b/browser/js/common/directives/search/search.template.html
@@ -5,7 +5,10 @@
     </header>
     <form>
       <label>Product Name</label>
-      <input type="text"/>
+      <input type="text" ng-model="search"/>
+      	<div class="search-results" ng-repeat="product in products | filter: search">
+      		<p style="color: pink" ng-show="search" ng-click="seeProduct(product)">{{product.title}}</p>
+      	</div>
     </form>
   </div>
 </section>
