--- a/browser/js/confirmation/confirmation.template.html
+++ b/browser/js/confirmation/confirmation.template.html
@@ -1,1 +1,2 @@
-<h2 style='text-align: center'>Thank you for your order! We hope you will be SATIS-fied.</h2>
+<h2 style='text-align: center'>Thank you for your order!</h2>
+<p>We hope you will be SATIS-fied.</p>
