--- a/browser/js/common/directives/search/search.template.html
+++ b/browser/js/common/directives/search/search.template.html
@@ -1,13 +1,13 @@
 <section>
-  <div class="side-panel-internal">
+  <div class="side-panel-internal search">
     <header>
       <h3>...search the range</h3>
     </header>
     <form>
       <label>Product Name</label>
       <input type="text" ng-model="search"/>
-      	<div class="search-results" ng-repeat="product in products | filter: search">
-      		<p style="color: pink" ng-show="search" ng-click="seeProduct(product)">{{product.title}}</p>
+      	<div ng-repeat="product in products | filter: search">
+      		<p class="search-results" ng-show="search" ng-click="seeProduct(product)">{{product.title}}</p>
       	</div>
     </form>
   </div>
