--- a/browser/js/login/login.html
+++ b/browser/js/login/login.html
@@ -1,4 +1,4 @@
-<h1>LOGIN</h1>
+<h1 class="login">LOGIN</h1>
 <form id="login-form" name="loginForm" ng-submit="loginForm.$valid && sendLogin(login)">
 
     <alert type="danger" ng-show="error">
@@ -16,7 +16,7 @@
     <button type="submit" class="btn btn-default">Submit</button>
 </form>
 
-<h1>SIGN UP</h1>
+<h1 class="login">SIGN UP</h1>
 <form id='signup-form' name="signupForm" ng-submit='signupForm.$valid && localSignup(signup)'>
     <div class="form-group">
         <label for="email">Name</label>
@@ -33,7 +33,9 @@
     <button type='submit' class='btn btn-default'>Sign up</button>
 </form>
 
-<h1>...OR SIGN IN WITH A TRUSTED PARTNER</h1>
-<a target='_self' href='/auth/google' class='btn btn-danger btn-google'>Google</a>
+<h1 class="login">...OR SIGN IN WITH A TRUSTED PARTNER</h1>
+<div class='oauth-holder'>
+<a target='_self' href='/auth/google' class='btn btn-danger btn-google oauth'>Sign in with Google</a>
 <!-- <a target='_self' href='/auth/facebook' class='btn btn-primary btn-facebook'>Facebook</a>
- --><a target='_self' href='/auth/twitter' class='btn btn-info btn-twitter'>Twitter</a>
+ --><a target='_self' href='/auth/twitter' class='btn btn-info btn-twitter'>Sign in with Twitter</a>
+</div>
