--- a/browser/js/wishlist/wishlist.html
+++ b/browser/js/wishlist/wishlist.html
@@ -1,10 +1,11 @@
-<h1 style="text-align: center">{{wishlister.name || wishlister.email}}'s Wishlist</h1>
-<h2>Share This Link: {{theLink}}</h2>
-	<ul class='panel panel-default' style="text-align: center">
-		<li ng-repeat="item in wishlist.items">
-			<!-- <img src={{item.product.photo}} /> -->
+<h1 class="wishlists">{{wishlister.name || wishlister.email}}'s Wishlist</h1>
+<h2 class="link">Share This Link: {{theLink}}</h2>
+	<div class="center">
+	<ul>
+		<li class="list-group-item" ng-repeat="item in wishlist.items">
+			<img class="thumbnail" src={{item.product.photo}} />
 			<h2>{{item.product.title}}</h2><h2>Price: {{item.price | currency}}</h2><h2>Qty: {{item.quantity}}</h2>
-
-			 <button class="btn btn-success" ng-click="buyWishlistItem(item)"><span class="glyphicon glyphicon-thumbs-up"></span> Buy for {{wishlister.email}}</button>
+			 <button class="btn btn-success" ng-click="buyWishlistItem(item)"><span class="glyphicon glyphicon-thumbs-up"></span> Buy for {{wishlister.email || wishlister.name}}</button>
 		</li>
 	</ul>
+</div>
