Got removal from user on order deletion to work as well.

--- a/browser/js/viewuser/viewuser.template.html
+++ b/browser/js/viewuser/viewuser.template.html
@@ -4,6 +4,10 @@
       <h2>Hello!</h2>
     </header>
     <div>
+      <h3>Orders</h3>
+      <ul>
+        <li ng-repeat="order in user.orders"></li>
+      </ul>
     </div>
   </section>
 
